# ObjectSearchROS

./: .gitignore  CMakeLists.txt  Makefile  README.txt  config_sample_file.ini  package.xml  phi-rosaria.rviz  phi.rviz
config_files/: config_teste.ini  script_create_configs.sh
description/urdf/: p3at_sonar.urdf.xacro  pioneer3at.urdf.xacro  pioneer3dx-rosaria2.urdf.xacro  pioneer3dx.urdf.xacro  pioneer3dx_wheel.xacro  sick_lms100.urdf.xacro  sick_lms100_2.urdf.xacro  sonar_sensor.urdf.xacro
description/worlds/: INF_73.world  scenario-indoor.world
description/worlds/models/Placa/: model.config  placa.sdf
description/worlds/models/Placa_201/: Placa_201.sdf  model.config
description/worlds/models/Placa_202/: Placa_202.sdf  model.config
description/worlds/models/Placa_203/: Placa_203.sdf  model.config
description/worlds/models/Placa_204/: Placa_204.sdf  model.config
description/worlds/models/Placa_205/: Placa_205.sdf  model.config
description/worlds/models/Placa_206/: Placa_206.sdf  model.config
description/worlds/models/Placa_207/: Placa_207.sdf  model.config
description/worlds/models/Placa_208/: Placa_208.sdf  model.config
description/worlds/models/Placa_209/: Placa_209.sdf  model.config
description/worlds/models/Placa_210/: Placa_210.sdf  model.config
description/worlds/models/Placa_211/: Placa_211.sdf  model.config
description/worlds/models/Placa_212/: Placa_212.sdf  model.config
description/worlds/models/Placa_213/: Placa_213.sdf  model.config
description/worlds/models/Placa_214/: Placa_214.sdf  model.config
launch/: example-indoor-gazebo.launch  rosaria.launch  slam.launch
mapas/: hotel1.html  hotel1.map  hotel11.doors  hotel11.html  hotel11.map  hotel2.doors  hotel2.html  hotel2.map  html2mobilesim.py  svg2mobilesim.py
maps/: big.doors  big.html  big.map  duplos.doors  duplos.html  igual.doors  igual.html  igual.map  inf73sup.doors  inf73sup.html  inf73sup.map  inf73sup_double.map  par_impar_par_impar.doors  par_impar_par_impar.html  par_impar_par_impar.map  par_impar_par_impar_inverse.doors  par_impar_par_impar_inverse.html  svg2mobilesim.py
src/explore/: BVP.cpp  BVP.h  Configuration.cpp  Configuration.h  Doors.cpp  Doors.h  GeoAssistant.cpp  GeoAssistant.h  GlutClass.cpp  GlutClass.h  Grid.cpp  Grid.h  Kernel.cpp  Kernel.h  Phi-Exploration.pro  PioneerBase.cpp  PioneerBase.h  PioneerBase_ARIA.cpp  PioneerBase_ARIA.h  PioneerBase_ROS.cpp  PioneerBase_ROS.h  Planning.cpp  Planning.h  Robot.cpp  Robot.h  SemanticBVP.cpp  SemanticBVP.h  SomeKernels.cpp  Utils.cpp  Utils.h  main.cpp  thinning.cpp
src/simple_control/: simple_control.py
(+151 files in other folders)
