<package>
  <name>phi_exploration</name>
  <version>0.0.0</version>
  <description>The Phi-Exploration package</description>
  <maintainer email="rqmaffei@inf.ufrgs.br">Renan de Queiroz Maffei</maintainer> 
  <license>BSD</license>
<!--  <url type="website">http://wiki.ros.org/Robots/Pioneer</url>-->
  <author email="rqmaffei@inf.ufrgs.br">Renan de Queiroz Maffei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>phi_ocr</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>urdf_tools</build_depend>

  <run_depend>phi_ocr</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>

<!--Gazebo stuff-->
  <run_depend>gazebo_ros_pkgs</run_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/description/worlds/models" />
    <gazebo_ros gazebo_media_path="${prefix}/description/worlds/models" />
  </export>

</package>
